# Sandrone

./: .gitignore  Cargo.toml  README.md  proposal.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
assets/dashboard/: index.html
docs/: README.md  codegraph.md  commands.md  connectors.md  constitution.md  dashboard.md  development.md  installation.md  obsidian.md  operations.md  workflow.md  workspace-layout.md
docs/proposals/: README.md
scripts/: bootstrap.sh  install-local.sh  install.sh  validate_proposals.py
skills/codex-auto-dev-workflow/: SKILL.md
skills/obsidian-change-trace/: SKILL.md
skills/sandrone/: SKILL.md
src/: assets.rs  codegraph.rs  cohort.rs  dashboard.rs  defaults.rs  delivery.rs  doc_status.rs  doctor.rs  help.rs  jobs.rs  loop_runner.rs  main.rs  merge_plan.rs  obsidian.rs  registry.rs  request_schedule.rs  review_gate.rs  slices.rs  state.rs  utils.rs
templates/: .env.example
templates/prompts/: decomposition-agent.md  decomposition-reviewer.md  design-reviewer.md  implementation-agent.md  integration-reviewer.md  issue-agent.md  plan-agent.md  plan-reviewer.md  rebase-agent.md  request-schedule-reviewer.md  test-reviewer.md
templates/runtime/: agent-journal.md  change-doc.md  dag.json  decomposition.json  decomposition.md  obsidian-change.md  obsidian-project.md  obsidian-relations.md  obsidian-requests.base  obsidian-slices.base  plan.md  pr-doc.md  request.md
templates/schemas/: review-result.schema.json
templates/scripts/: pr-merge.sh  (+11 more)
tests/: cli_flow.rs
(+221 files in other folders)
